antlr/generated/GreekBaseParser.py
# Generated from antlr/GreekBaseParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GreekBaseParser ( Parser ):

    grammarFileName = "GreekBaseParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'begin'", "'end'", "'if'", "'then'", 
                     "'else'", "'loop'", "'while'", "'for'", "'in'", "'out'", 
                     "'return'", "'procedure'", "'function'", "'is'", "'type'", 
                     "'array'", "'of'", "'const'", "'use'", "'with'", "'new'", 
                     "'print'", "'{'", "'}'", "'int'", "'float'", "'char'", 
                     "'string'", "':='", "'='", "'/='", "'<'", "'<='", "'>'", 
                     "'>='", "'+'", "'-'", "'*'", "'/'", "'mod'", "'and'", 
                     "'or'", "'not'", "'.'", "':'", "';'", "','", "'=>'", 
                     "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "KW_BEGIN", "KW_END", "KW_IF", "KW_THEN", 
                      "KW_ELSE", "KW_LOOP", "KW_WHILE", "KW_FOR", "KW_IN", 
                      "KW_OUT", "KW_RETURN", "KW_PROCEDURE", "KW_FUNCTION", 
                      "KW_IS", "KW_TYPE", "KW_ARRAY", "KW_OF", "KW_CONST", 
                      "KW_USE", "KW_WITH", "KW_NEW", "KW_PRINT", "KW_LCURL", 
                      "KW_RCURL", "KW_INT", "KW_FLOAT", "KW_CHAR", "KW_STRING", 
                      "OP_ASSIGN", "OP_EQUAL", "OP_NOT_EQUAL", "OP_LESS", 
                      "OP_LESS_EQ", "OP_GREATER", "OP_GREATER_EQ", "OP_ADD", 
                      "OP_SUB", "OP_MUL", "OP_DIV", "OP_MOD", "OP_AND", 
                      "OP_OR", "OP_NOT", "OP_DOT", "OP_COLON", "OP_SEMICOLON", 
                      "OP_COMMA", "OP_ARROW", "OP_LPAREN", "OP_RPAREN", 
                      "OP_LBRACKET", "OP_RBRACKET", "LIT_INT", "LIT_FLOAT", 
                      "LIT_STRING", "LIT_CHAR", "IDENTIFIER", "LINE_COMMENT", 
                      "MULTILINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_literal = 1
    RULE_statement = 2
    RULE_nonDeclarativeStatement = 3
    RULE_ifStatement = 4
    RULE_loopStatement = 5
    RULE_printStatement = 6
    RULE_assignment = 7
    RULE_variableDeclaration = 8
    RULE_formalParameterPart = 9
    RULE_parameterSpecification = 10
    RULE_modeSpecifier = 11
    RULE_procedureDeclaration = 12
    RULE_functionDeclaration = 13
    RULE_condition = 14
    RULE_expression = 15
    RULE_relop = 16
    RULE_varType = 17

    ruleNames =  [ "program", "literal", "statement", "nonDeclarativeStatement", 
                   "ifStatement", "loopStatement", "printStatement", "assignment", 
                   "variableDeclaration", "formalParameterPart", "parameterSpecification", 
                   "modeSpecifier", "procedureDeclaration", "functionDeclaration", 
                   "condition", "expression", "relop", "varType" ]

    EOF = Token.EOF
    KW_BEGIN=1
    KW_END=2
    KW_IF=3
    KW_THEN=4
    KW_ELSE=5
    KW_LOOP=6
    KW_WHILE=7
    KW_FOR=8
    KW_IN=9
    KW_OUT=10
    KW_RETURN=11
    KW_PROCEDURE=12
    KW_FUNCTION=13
    KW_IS=14
    KW_TYPE=15
    KW_ARRAY=16
    KW_OF=17
    KW_CONST=18
    KW_USE=19
    KW_WITH=20
    KW_NEW=21
    KW_PRINT=22
    KW_LCURL=23
    KW_RCURL=24
    KW_INT=25
    KW_FLOAT=26
    KW_CHAR=27
    KW_STRING=28
    OP_ASSIGN=29
    OP_EQUAL=30
    OP_NOT_EQUAL=31
    OP_LESS=32
    OP_LESS_EQ=33
    OP_GREATER=34
    OP_GREATER_EQ=35
    OP_ADD=36
    OP_SUB=37
    OP_MUL=38
    OP_DIV=39
    OP_MOD=40
    OP_AND=41
    OP_OR=42
    OP_NOT=43
    OP_DOT=44
    OP_COLON=45
    OP_SEMICOLON=46
    OP_COMMA=47
    OP_ARROW=48
    OP_LPAREN=49
    OP_RPAREN=50
    OP_LBRACKET=51
    OP_RBRACKET=52
    LIT_INT=53
    LIT_FLOAT=54
    LIT_STRING=55
    LIT_CHAR=56
    IDENTIFIER=57
    LINE_COMMENT=58
    MULTILINE_COMMENT=59
    WS=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GreekBaseParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GreekBaseParser.StatementContext)
            else:
                return self.getTypedRuleContext(GreekBaseParser.StatementContext,i)


        def getRuleIndex(self):
            return GreekBaseParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GreekBaseParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080054408) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(GreekBaseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIT_INT(self):
            return self.getToken(GreekBaseParser.LIT_INT, 0)

        def LIT_FLOAT(self):
            return self.getToken(GreekBaseParser.LIT_FLOAT, 0)

        def LIT_CHAR(self):
            return self.getToken(GreekBaseParser.LIT_CHAR, 0)

        def LIT_STRING(self):
            return self.getToken(GreekBaseParser.LIT_STRING, 0)

        def getRuleIndex(self):
            return GreekBaseParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = GreekBaseParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 135107988821114880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonDeclarativeStatement(self):
            return self.getTypedRuleContext(GreekBaseParser.NonDeclarativeStatementContext,0)


        def procedureDeclaration(self):
            return self.getTypedRuleContext(GreekBaseParser.ProcedureDeclarationContext,0)


        def getRuleIndex(self):
            return GreekBaseParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = GreekBaseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 7, 22, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.nonDeclarativeStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.procedureDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonDeclarativeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(GreekBaseParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(GreekBaseParser.LoopStatementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(GreekBaseParser.AssignmentContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(GreekBaseParser.PrintStatementContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(GreekBaseParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return GreekBaseParser.RULE_nonDeclarativeStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonDeclarativeStatement" ):
                return visitor.visitNonDeclarativeStatement(self)
            else:
                return visitor.visitChildren(self)




    def nonDeclarativeStatement(self):

        localctx = GreekBaseParser.NonDeclarativeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nonDeclarativeStatement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.ifStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.loopStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.printStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.variableDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._nonDeclarativeStatement = None # NonDeclarativeStatementContext
            self.thenBranch = list() # of NonDeclarativeStatementContexts
            self.elseBranch = list() # of NonDeclarativeStatementContexts

        def KW_IF(self, i:int=None):
            if i is None:
                return self.getTokens(GreekBaseParser.KW_IF)
            else:
                return self.getToken(GreekBaseParser.KW_IF, i)

        def condition(self):
            return self.getTypedRuleContext(GreekBaseParser.ConditionContext,0)


        def KW_THEN(self):
            return self.getToken(GreekBaseParser.KW_THEN, 0)

        def KW_END(self):
            return self.getToken(GreekBaseParser.KW_END, 0)

        def OP_SEMICOLON(self):
            return self.getToken(GreekBaseParser.OP_SEMICOLON, 0)

        def KW_LCURL(self):
            return self.getToken(GreekBaseParser.KW_LCURL, 0)

        def KW_RCURL(self):
            return self.getToken(GreekBaseParser.KW_RCURL, 0)

        def KW_ELSE(self):
            return self.getToken(GreekBaseParser.KW_ELSE, 0)

        def nonDeclarativeStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GreekBaseParser.NonDeclarativeStatementContext)
            else:
                return self.getTypedRuleContext(GreekBaseParser.NonDeclarativeStatementContext,i)


        def getRuleIndex(self):
            return GreekBaseParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = GreekBaseParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(GreekBaseParser.KW_IF)
            self.state = 58
            self.condition()
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.state = 59
                self.match(GreekBaseParser.KW_THEN)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080050312) != 0):
                    self.state = 60
                    localctx._nonDeclarativeStatement = self.nonDeclarativeStatement()
                    localctx.thenBranch.append(localctx._nonDeclarativeStatement)
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 66
                    self.match(GreekBaseParser.KW_ELSE)
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080050312) != 0):
                        self.state = 67
                        localctx._nonDeclarativeStatement = self.nonDeclarativeStatement()
                        localctx.elseBranch.append(localctx._nonDeclarativeStatement)
                        self.state = 72
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 75
                self.match(GreekBaseParser.KW_END)
                self.state = 76
                self.match(GreekBaseParser.KW_IF)
                self.state = 77
                self.match(GreekBaseParser.OP_SEMICOLON)
                pass
            elif token in [23]:
                self.state = 78
                self.match(GreekBaseParser.KW_LCURL)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080050312) != 0):
                    self.state = 79
                    localctx._nonDeclarativeStatement = self.nonDeclarativeStatement()
                    localctx.thenBranch.append(localctx._nonDeclarativeStatement)
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 85
                    self.match(GreekBaseParser.KW_ELSE)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080050312) != 0):
                        self.state = 86
                        localctx._nonDeclarativeStatement = self.nonDeclarativeStatement()
                        localctx.elseBranch.append(localctx._nonDeclarativeStatement)
                        self.state = 91
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 94
                self.match(GreekBaseParser.KW_RCURL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_WHILE(self):
            return self.getToken(GreekBaseParser.KW_WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(GreekBaseParser.ConditionContext,0)


        def KW_LOOP(self, i:int=None):
            if i is None:
                return self.getTokens(GreekBaseParser.KW_LOOP)
            else:
                return self.getToken(GreekBaseParser.KW_LOOP, i)

        def KW_LCURL(self):
            return self.getToken(GreekBaseParser.KW_LCURL, 0)

        def KW_RCURL(self):
            return self.getToken(GreekBaseParser.KW_RCURL, 0)

        def KW_END(self):
            return self.getToken(GreekBaseParser.KW_END, 0)

        def OP_SEMICOLON(self):
            return self.getToken(GreekBaseParser.OP_SEMICOLON, 0)

        def nonDeclarativeStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GreekBaseParser.NonDeclarativeStatementContext)
            else:
                return self.getTypedRuleContext(GreekBaseParser.NonDeclarativeStatementContext,i)


        def getRuleIndex(self):
            return GreekBaseParser.RULE_loopStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)




    def loopStatement(self):

        localctx = GreekBaseParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loopStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(GreekBaseParser.KW_WHILE)
            self.state = 98
            self.condition()
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.state = 99
                self.match(GreekBaseParser.KW_LOOP)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080050312) != 0):
                    self.state = 100
                    self.nonDeclarativeStatement()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.match(GreekBaseParser.KW_END)
                self.state = 107
                self.match(GreekBaseParser.KW_LOOP)
                self.state = 108
                self.match(GreekBaseParser.OP_SEMICOLON)
                pass
            elif token in [23]:
                self.state = 109
                self.match(GreekBaseParser.KW_LCURL)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188080050312) != 0):
                    self.state = 110
                    self.nonDeclarativeStatement()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 116
                self.match(GreekBaseParser.KW_RCURL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PRINT(self):
            return self.getToken(GreekBaseParser.KW_PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(GreekBaseParser.ExpressionContext,0)


        def OP_SEMICOLON(self):
            return self.getToken(GreekBaseParser.OP_SEMICOLON, 0)

        def getRuleIndex(self):
            return GreekBaseParser.RULE_printStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = GreekBaseParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(GreekBaseParser.KW_PRINT)
            self.state = 120
            self.expression(0)
            self.state = 121
            self.match(GreekBaseParser.OP_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GreekBaseParser.IDENTIFIER, 0)

        def OP_ASSIGN(self):
            return self.getToken(GreekBaseParser.OP_ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(GreekBaseParser.ExpressionContext,0)


        def OP_SEMICOLON(self):
            return self.getToken(GreekBaseParser.OP_SEMICOLON, 0)

        def getRuleIndex(self):
            return GreekBaseParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = GreekBaseParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(GreekBaseParser.IDENTIFIER)
            self.state = 124
            self.match(GreekBaseParser.OP_ASSIGN)
            self.state = 125
            self.expression(0)
            self.state = 126
            self.match(GreekBaseParser.OP_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GreekBaseParser.IDENTIFIER, 0)

        def OP_COLON(self):
            return self.getToken(GreekBaseParser.OP_COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(GreekBaseParser.VarTypeContext,0)


        def OP_SEMICOLON(self):
            return self.getToken(GreekBaseParser.OP_SEMICOLON, 0)

        def OP_ASSIGN(self):
            return self.getToken(GreekBaseParser.OP_ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(GreekBaseParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GreekBaseParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = GreekBaseParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(GreekBaseParser.IDENTIFIER)
            self.state = 129
            self.match(GreekBaseParser.OP_COLON)
            self.state = 130
            self.varType()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 131
                self.match(GreekBaseParser.OP_ASSIGN)
                self.state = 132
                self.expression(0)


            self.state = 135
            self.match(GreekBaseParser.OP_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP_LPAREN(self):
            return self.getToken(GreekBaseParser.OP_LPAREN, 0)

        def parameterSpecification(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GreekBaseParser.ParameterSpecificationContext)
            else:
                return self.getTypedRuleContext(GreekBaseParser.ParameterSpecificationContext,i)


        def OP_RPAREN(self):
            return self.getToken(GreekBaseParser.OP_RPAREN, 0)

        def OP_SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(GreekBaseParser.OP_SEMICOLON)
            else:
                return self.getToken(GreekBaseParser.OP_SEMICOLON, i)

        def getRuleIndex(self):
            return GreekBaseParser.RULE_formalParameterPart

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameterPart" ):
                return visitor.visitFormalParameterPart(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterPart(self):

        localctx = GreekBaseParser.FormalParameterPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_formalParameterPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(GreekBaseParser.OP_LPAREN)
            self.state = 138
            self.parameterSpecification()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 139
                self.match(GreekBaseParser.OP_SEMICOLON)
                self.state = 140
                self.parameterSpecification()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(GreekBaseParser.OP_RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterSpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(GreekBaseParser.IDENTIFIER)
            else:
                return self.getToken(GreekBaseParser.IDENTIFIER, i)

        def OP_COLON(self):
            return self.getToken(GreekBaseParser.OP_COLON, 0)

        def modeSpecifier(self):
            return self.getTypedRuleContext(GreekBaseParser.ModeSpecifierContext,0)


        def literal(self):
            return self.getTypedRuleContext(GreekBaseParser.LiteralContext,0)


        def OP_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GreekBaseParser.OP_COMMA)
            else:
                return self.getToken(GreekBaseParser.OP_COMMA, i)

        def getRuleIndex(self):
            return GreekBaseParser.RULE_parameterSpecification

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterSpecification" ):
                return visitor.visitParameterSpecification(self)
            else:
                return visitor.visitChildren(self)




    def parameterSpecification(self):

        localctx = GreekBaseParser.ParameterSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameterSpecification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(GreekBaseParser.IDENTIFIER)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 149
                self.match(GreekBaseParser.OP_COMMA)
                self.state = 150
                self.match(GreekBaseParser.IDENTIFIER)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.match(GreekBaseParser.OP_COLON)
            self.state = 157
            self.modeSpecifier()
            self.state = 158
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IN(self):
            return self.getToken(GreekBaseParser.KW_IN, 0)

        def KW_OUT(self):
            return self.getToken(GreekBaseParser.KW_OUT, 0)

        def getRuleIndex(self):
            return GreekBaseParser.RULE_modeSpecifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModeSpecifier" ):
                return visitor.visitModeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def modeSpecifier(self):
